测试使用 panel A6，另外这个面板在传入大量 Markdown 的时候，绘图会绘制超过 20 秒，造成无法出图